// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it renders Dashboard without errors 1`] = `
<div
  class="led green-led"
>
  Unlocked
</div>
`;

exports[`it renders Dashboard without errors 2`] = `
<div
  class="led green-led"
>
  Open
</div>
`;
